<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home"
    tools:context=".HomeActivity">


    <TextView
        android:id="@+id/textHelloUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/text_helloUser"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size" />




    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="93dp"
                app:srcCompat="@android:drawable/ic_dialog_email" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/text_personalStatus"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_personalStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/text_btnStatus"
                android:textAllCaps="false" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="93dp"
                app:srcCompat="@android:drawable/ic_dialog_email" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_teamStatus"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_teamStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/text_btnStatus"
                android:textAllCaps="false" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_lock_idle_alarm"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_dailyroutine"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHelloUser">

        <CheckBox
            android:id="@+id/checkBox_breakfast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_checkBreakfast"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/checkBox_planMyDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_checkPlanMyDay"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/checkBox_startWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_checkStartWork"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/checkBox_Lunch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_checkLunch"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/checkBox_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_checkExercise"
            android:textColor="@color/black" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>